--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
                 <div class="container-sm">
                     <div class="hero-inner">
                         <div class="hero-copy">
-                            <h1 class="hero-title mt-0">Scale Steerable Networks</h1>
-                            <h1 class="hero-title mt-0">Group 111</h1>
-                            <p class="hero-paragraph">Paper reproducibility project for the TU Delft Deep Learning Course.</p>
-                            <p class="hero-paragraph">Stefan & Mark.</p>
+                            <h1 class="hero-title mt-0">Welcome</h1>
+                            <p class="hero-paragraph">on the website of Mark</p>
                             <h1 class="hero-title mt-0"></h1>
                             <h1 class="hero-title mt-0"></h1>
                             <div class="hero-cta">
-                                <a class="button button-primary button-wide-mobile" href="https://lukacs-mark.medium.com/sesn-cec766026179">Blog</a>
+                                <a class="button button-primary button-wide-mobile" href="https://lukacs-mark.medium.com/sesn-cec766026179">LinkedIn</a>
+                                <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/reproduction-project-DL2021"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1.03em" height="1em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 250"><path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z" fill="#161614"></path></svg>
                             </div>
                             <h1 class="hero-title mt-0"></h1>
                             <div class="hero-cta">
