--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                             </div>
                         </div>
                         <div class="mockup-container">
-                            <div class="mockup-bg">
+                            <div class="mockup-bg"> 
                                 <img src="dist/images/TU_Delft_lib.jpg" alt="iPhone illustration">
                             </div>
-                            <img class="device-mockup" src="dist/images/iphone-hero-bg.svg" alt="iPhone Hero">
+                            <img class="device-mockup" src="dist/images/TU_Delft_lib.jpg" alt="iPhone Hero">
                         </div>
                     </div>
                 </div>
