created table placeholder

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
                         </div>
                         <div class="mockup-container">
                             <div class="mockup-bg"> 
+                                <table>
+                                    <tr>
+                                        <td>Project1</td>
+                                        <td>Project2</td>
+                                        <td>Project3</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Alfreds Futterkiste</td>
+                                        <td>Maria Anders</td>
+                                        <td>Germany</td>
+                                    </tr>
+                                </table>
                                 <img src="dist/images/TU_Delft_lib.jpg" alt="iPhone illustration">
                             </div>
                             <img class="device-mockup" src="src/images/TU_Delft_lib.jpg" alt="iPhone Hero">
