pulled in old content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
                     <div class="hero-inner">
                         <div class="hero-copy">
                             <h1 class="hero-title mt-0">Welcome</h1>
-                            <p class="hero-paragraph">on the website of Mark</p>
+                            <p class="hero-paragraph">
+                                on the website of Mark...
+                            </p>
+                            <p class="hero-paragraph">
+                                I'm a graduating data scientist. Take a look at my projects while I figure out the rest of the website...<\br>
+                                <i>If you're in a hurry the list [numpy, pandas, pytorch, matplotlib, networkx] should tell everything!<\i>
+                            </p>
                             <h1 class="hero-title mt-0"></h1>
                             <h1 class="hero-title mt-0"></h1>
                             <div class="hero-cta">
@@ -34,7 +40,9 @@
                             </div>
                             <h1 class="hero-title mt-0"></h1>
                             <div class="hero-cta">
-                                <a class="button button-primary button-wide-mobile" href="https://lukacs-mark.medium.com/">Medium</a>
+                                <a class="button button-primary button-wide-mobile" href="https://lukacs-mark.medium.com/">
+                                Medium
+                                </a>
                             </div>
                             <h1 class="hero-title mt-0"></h1>
                             <div class="hero-cta">
@@ -45,19 +53,68 @@
                         </div>
                         <div class="mockup-container">
                             <div class="mockup-bg"> 
+                                Stuff where I mostly coded 
                                 <table>
                                     <tr>
-                                        <td>Project1</td>
-                                        <td>Project2</td>
-                                        <td>Project3</td>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/weather-data-analyzer-public">
+                                            My bachelor thesis project about conditional probabilities
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/color_sample_measurements">
+                                            A research project where we calculated the difference of the color between the samples based on spectral performance
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/BME-cool-part">
+                                            A few cool stuff I've done under my bachelors
+                                            </a>
+                                        </td>
                                     </tr>
                                     <tr>
-                                        <td>Alfreds Futterkiste</td>
-                                        <td>Maria Anders</td>
-                                        <td>Germany</td>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://github.com/Defragged-Zebra/Ericsson2020">
+                                            A huge C++ project we still haven't cleaned up after the competition
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://github.com/Defragged-Zebra/Bosch2020">
+                                            And the next project with the same team, this time in python
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/lens-system-optimizer">
+                                            The time when I nerded out, and made a mathematical model following a random idea. To be fair I've solved a lot of my bachelor homeworks with notebooks like this.
+                                            </a>
+                                        </td>
                                     </tr>
                                 </table>
-                                <img src="dist/images/TU_Delft_lib.jpg" alt="iPhone illustration">
+                                Stuff when we haven't reached the state to code much
+                                <table>
+                                    <tr>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://towardsdatascience.com/sesn-cec766026179">
+                                            When we analyzed some dangerously-high-level math concepts to understand how to improve existing CNNs
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://lukacs-mark.medium.com/here-comes-the-police-36e050a1224e">
+                                            Or this time when we translated a vision into a technological roadmap
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/BME-cool-part">
+                                            A few cool stuff I've done under my bachelors
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    
+                                </table>
+                                If this all got you interested, and have a fun next project proposal,
+                                <a class="button button-primary button-wide-mobile" href="https://www.linkedin.com/feed/">
+                                share it with me
+                                </a>
                             </div>
                             <img class="device-mockup" src="src/images/TU_Delft_lib.jpg" alt="iPhone Hero">
                         </div>
