fixed buttons and license

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                                 on the website of Mark...
                             </p>
                             <p class="hero-paragraph">
-                                I'm a graduating data scientist. Take a look at my projects while I figure out the rest of the website...<\br>
-                                <i>If you're in a hurry the list [numpy, pandas, pytorch, matplotlib, networkx] should tell everything!<\i>
+                                I'm a graduating data scientist. Take a look at my projects while I figure out the rest of the website...</br>
+                                <i>If you're in a hurry the list [numpy, pandas, pytorch, matplotlib, networkx] should tell everything!</i>
                             </p>
                             <h1 class="hero-title mt-0"></h1>
                             <h1 class="hero-title mt-0"></h1>
@@ -52,39 +52,38 @@
                             </div>
                         </div>
                         <div class="mockup-container">
-                            <div class="mockup-bg"> 
                                 Stuff where I mostly coded 
                                 <table>
                                     <tr>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/weather-data-analyzer-public">
+                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/weather-data-analyzer-public">
                                             My bachelor thesis project about conditional probabilities
                                             </a>
                                         </td>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/color_sample_measurements">
+                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/color_sample_measurements">
                                             A research project where we calculated the difference of the color between the samples based on spectral performance
                                             </a>
                                         </td>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/BME-cool-part">
+                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/BME-cool-part">
                                             A few cool stuff I've done under my bachelors
                                             </a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://github.com/Defragged-Zebra/Ericsson2020">
+                                            <a class="button button-primary button-wide-mobile" href="https://github.com/Defragged-Zebra/Ericsson2020">
                                             A huge C++ project we still haven't cleaned up after the competition
                                             </a>
                                         </td>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://github.com/Defragged-Zebra/Bosch2020">
+                                            <a class="button button-primary button-wide-mobile" href="https://github.com/Defragged-Zebra/Bosch2020">
                                             And the next project with the same team, this time in python
                                             </a>
                                         </td>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/lens-system-optimizer">
+                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/lens-system-optimizer">
                                             The time when I nerded out, and made a mathematical model following a random idea. To be fair I've solved a lot of my bachelor homeworks with notebooks like this.
                                             </a>
                                         </td>
@@ -94,30 +93,29 @@
                                 <table>
                                     <tr>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://towardsdatascience.com/sesn-cec766026179">
+                                            <a class="button button-primary button-wide-mobile" href="https://towardsdatascience.com/sesn-cec766026179">
                                             When we analyzed some dangerously-high-level math concepts to understand how to improve existing CNNs
                                             </a>
                                         </td>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://lukacs-mark.medium.com/here-comes-the-police-36e050a1224e">
+                                            <a class="button button-primary button-wide-mobile" href="https://lukacs-mark.medium.com/here-comes-the-police-36e050a1224e">
                                             Or this time when we translated a vision into a technological roadmap
                                             </a>
                                         </td>
                                         <td>
-                                            <a class="write-flip-action-for-these" href="https://github.com/vioSpark/BME-cool-part">
+                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/BME-cool-part">
                                             A few cool stuff I've done under my bachelors
                                             </a>
                                         </td>
                                     </tr>
                                     
                                 </table>
-                                If this all got you interested, and have a fun next project proposal,
+                                If this all got you interested, and have a fun next project proposal,</br>
                                 <a class="button button-primary button-wide-mobile" href="https://www.linkedin.com/feed/">
                                 share it with me
                                 </a>
-                            </div>
-                            <img class="device-mockup" src="src/images/TU_Delft_lib.jpg" alt="iPhone Hero">
                         </div>
+                        <img class="device-mockup" src="src/images/TU_Delft_lib.jpg" alt="iPhone Hero">
                     </div>
                 </div>
             </section>
