started to edit css and adding flipcards

--- a/index.html
+++ b/index.html
@@ -115,6 +115,19 @@
                                 share it with me
                                 </a>
                         </div>
+                        Test area:
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front">
+                                    <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                </div>
+                                    <div class="flip-card-back">
+                                    <h1>John Doe</h1>
+                                    <p>Architect & Engineer</p>
+                                    <p>We love that guy</p>
+                                </div>
+                            </div>
+                        </div>
                         <img class="device-mockup" src="src/images/TU_Delft_lib.jpg" alt="iPhone Hero">
                     </div>
                 </div>
