--- a/index.html
+++ b/index.html
@@ -56,36 +56,90 @@
                                 <table>
                                     <tr>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/weather-data-analyzer-public">
-                                            My bachelor thesis project about conditional probabilities
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>My bachelor thesis project about conditional probabilities</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/weather-data-analyzer-public">
+                                                            code</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/color_sample_measurements">
-                                            A research project where we calculated the difference of the color between the samples based on spectral performance
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>A research project where we calculated the difference of the color between the samples based on spectral performance</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/color_sample_measurements">
+                                                            code</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/BME-cool-part">
-                                            A few cool stuff I've done under my bachelors
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>A few cool stuff I've done under my bachelors</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/BME-cool-part">
+                                                            code</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://github.com/Defragged-Zebra/Ericsson2020">
-                                            A huge C++ project we still haven't cleaned up after the competition
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>A huge C++ project we still haven't cleaned up after the competition</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://github.com/Defragged-Zebra/Ericsson2020">
+                                                            code</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://github.com/Defragged-Zebra/Bosch2020">
-                                            And the next project with the same team, this time in python
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>And the next project with the same team, this time in python</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://github.com/Defragged-Zebra/Bosch2020">
+                                                            code</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/lens-system-optimizer">
-                                            The time when I nerded out, and made a mathematical model following a random idea. To be fair I've solved a lot of my bachelor homeworks with notebooks like this.
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>The time when I nerded out, and made a mathematical model following a random idea. To be fair I've solved a lot of my bachelor homeworks with notebooks like this.</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/lens-system-optimizer">
+                                                            code</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                 </table>
@@ -93,19 +147,46 @@
                                 <table>
                                     <tr>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://towardsdatascience.com/sesn-cec766026179">
-                                            When we analyzed some dangerously-high-level math concepts to understand how to improve existing CNNs
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>When we analyzed some dangerously-high-level math concepts to understand how to improve existing CNNs</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://towardsdatascience.com/sesn-cec766026179">
+                                                            blogpost</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://lukacs-mark.medium.com/here-comes-the-police-36e050a1224e">
-                                            Or this time when we translated a vision into a technological roadmap
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>Or this time when we translated a vision into a technological roadmap</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://lukacs-mark.medium.com/here-comes-the-police-36e050a1224e">
+                                                            blogpost</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                         <td>
-                                            <a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/BME-cool-part">
-                                            A few cool stuff I've done under my bachelors
-                                            </a>
+                                            <div class="flip-card">
+                                                <div class="flip-card-inner">
+                                                    <div class="flip-card-front">
+                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                    </div>
+                                                        <div class="flip-card-back">
+                                                        <p>A few cool stuff I've done under my bachelors</p>
+                                                        <p><a class="button button-primary button-wide-mobile" href="https://github.com/vioSpark/BME-cool-part">
+                                                            code</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                     
@@ -116,18 +197,7 @@
                                 </a>
                         </div>
                         Test area:
-                        <div class="flip-card">
-                            <div class="flip-card-inner">
-                                <div class="flip-card-front">
-                                    <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
-                                </div>
-                                    <div class="flip-card-back">
-                                    <h1>John Doe</h1>
-                                    <p>Architect & Engineer</p>
-                                    <p>We love that guy</p>
-                                </div>
-                            </div>
-                        </div>
+                        TODO:make this shadow-bg-hovering
                         <img class="device-mockup" src="src/images/TU_Delft_lib.jpg" alt="iPhone Hero">
                     </div>
                 </div>
