added file w parallax effect but it breaks everything

--- a/index.html
+++ b/index.html
@@ -196,9 +196,11 @@
                                 share it with me
                                 </a>
                         </div>
+                        <div>
                         Test area:
-                        TODO:make this shadow-bg-hovering
+                        TODO:make this shadow-bg-hovering -> parallax
                         <img class="device-mockup" src="src/images/TU_Delft_lib.jpg" alt="iPhone Hero">
+                        </div>
                     </div>
                 </div>
             </section>
