--- a/index.html
+++ b/index.html
@@ -12,29 +12,18 @@
 </head>
 
 <body class="is-boxed has-animations">
-<!-- 
-    <div class="parallax">
-        <div class="parallax__layer parallax__layer--back">
-          <div class="title">This is the background</div>
-        </div>
-        <div class="parallax__layer parallax__layer--base">
-          <div class="title">This is the foreground</div>
-        </div>
-    </div> 
--->
-
-
-
-
-
-
     <div class="body-wrap boxed-container">
         <main>
             <section class="hero text-center text-light parallax">
                 <div class="parallax__layer parallax__layer--back">
-                    <div class="hero-bg"></div>
-                    <div class="hero-particles-container">
-                        <canvas id="hero-particles"></canvas>
+                    <div>
+                        <div class="hero-bg"></div>
+                        <div class="hero-particles-container">
+                            <canvas id="hero-particles"></canvas>
+                        </div>
+                    </div>
+                    <div class="hero-reverse-particles-container">
+                        <img src="src/images/TU_Delft_lib.jpg" alt="TU Delft Library", background-color="black";>
                     </div>
                 </div>
                 <div class="container-sm parallax__layer parallax__layer--base">
@@ -212,12 +201,6 @@
                                 <a class="button button-primary button-wide-mobile" href="https://www.linkedin.com/feed/">
                                 share it with me
                                 </a>
-                        </div>
-
-                        <div>
-                        Test area:
-                        TODO:make this shadow-bg-hovering -> parallax
-                        <img class="device-mockup" src="src/images/TU_Delft_lib.jpg" alt="iPhone Hero">
                         </div>
                     </div>
                 </div>
