--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mark Lukacs</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
-    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
 </head>
 
@@ -79,7 +79,7 @@
                                             <div class="flip-card">
                                                 <div class="flip-card-inner">
                                                     <div class="flip-card-front">
-                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                        <img src="src/images/color_sample_measurement.jpg" alt="Yellow color sample">
                                                     </div>
                                                         <div class="flip-card-back">
                                                         <p>A research project where we calculated the difference of the color between the samples based on spectral performance</p>
@@ -156,7 +156,7 @@
                                             <div class="flip-card">
                                                 <div class="flip-card-inner">
                                                     <div class="flip-card-front">
-                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                        <img src="src/images/sesn.png" alt="Convolution kernels">
                                                     </div>
                                                         <div class="flip-card-back">
                                                         <p>When we analyzed some dangerously-high-level math concepts to understand how to improve existing CNNs</p>
@@ -170,7 +170,7 @@
                                             <div class="flip-card">
                                                 <div class="flip-card-inner">
                                                     <div class="flip-card-front">
-                                                        <img src="src/images/TU_Delft_lib.jpg" alt="Avatar" style="width:300px;height:300px;">
+                                                        <img src="src/images/JIP.jpeg" alt="JIP team" class="flip-image">
                                                     </div>
                                                         <div class="flip-card-back">
                                                         <p>Or this time when we translated a vision into a technological roadmap</p>
@@ -221,7 +221,7 @@
         </footer>
     </div>
 
-    <script src="dist/js/main.min.js"></script>
+    <script src="src/js/main.min.js"></script>
 </body>
 
 </html>
